--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,16 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
-    "from transformers import pipeline"
+    "from transformers import pipeline\n",
+    "\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn.functional as F\n",
+    "import torchtext.vocab as vocab"
    ]
   },
   {
@@ -2009,96 +2017,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('$9.4 million', 'MONEY'), ('the prior year', 'DATE'), ('$2.7 million', 'MONEY')]\n",
-      "[('Lil Jon', 'PERSON'), ('Lisbon', 'GPE')]\n",
-      "[('Portugal', 'GPE'), ('last summer', 'DATE')]\n",
-      "[('Eu', 'PERSON')]\n"
+      "Took 612.89 seconds\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>text</th>\n",
-       "      <th>lang</th>\n",
-       "      <th>ner_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Net income was $9.4 million compared to the pr...</td>\n",
-       "      <td>en</td>\n",
-       "      <td>$9.4 million the prior year $2.7 million</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Lil Jon was walking down the Lisbon beach</td>\n",
-       "      <td>en</td>\n",
-       "      <td>NAME LOCATION</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>I went to Portugal last summer</td>\n",
-       "      <td>en</td>\n",
-       "      <td>LOCATION last summer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Eu gosto de comer gelados no Santini de Belém</td>\n",
-       "      <td>pt</td>\n",
-       "      <td>NAME</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                                               text lang  \\\n",
-       "0      1  Net income was $9.4 million compared to the pr...   en   \n",
-       "1      2          Lil Jon was walking down the Lisbon beach   en   \n",
-       "2      3                     I went to Portugal last summer   en   \n",
-       "3      4      Eu gosto de comer gelados no Santini de Belém   pt   \n",
-       "\n",
-       "                                   ner_text  \n",
-       "0  $9.4 million the prior year $2.7 million  \n",
-       "1                             NAME LOCATION  \n",
-       "2                      LOCATION last summer  \n",
-       "3                                      NAME  "
-      ]
-     },
-     "execution_count": 300,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2126,6 +2053,7 @@
     "# ORDINAL - \"first\", \"second\", etc.\n",
     "# CARDINAL - Numerals that do not fall under another type.\n",
     "\n",
+    "\n",
     "# if we group first by language then we only\n",
     "# need to call nlp.pipe once for each language\n",
     "# i.e. faster\n",
@@ -2138,35 +2066,41 @@
     "\n",
     "def ner(df, text_col_name, lang_col_name, actions, df_index_col = 'index'):\n",
     "\n",
-    "    def act(doc):\n",
-    "\n",
-    "        # FIX\n",
-    "        # instead of appending we need to get the substring that represents and ent\n",
-    "        # and replace it in the original txt!\n",
-    "        \n",
-    "        text = []\n",
+    "    def act(doc):       \n",
+    "        text = doc.text\n",
     "        for ent in doc.ents:\n",
     "            # print(ent.text, ent.label_)\n",
-    "            if ent.label_ in actions.keys():\n",
-    "                if actions[ent.label_] is not None:\n",
-    "                    text.append(actions[ent.label_])\n",
-    "            else:\n",
-    "                text.append(ent.text)\n",
+    "            ent_label = ent.label_\n",
+    "            ent_text = ent.text\n",
+    "            if ent_label in actions.keys():\n",
+    "                text = text.replace(ent_text, actions[ent_label] if not None else '')\n",
     "        return text\n",
     "\n",
-    "    disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"lemmatizer\"]\n",
+    "    disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"lemmatizer\"]  # for efficiency reasons\n",
     "    df_lang_gen = group_by_language(df, lang_col_name)\n",
     "    new_df = pd.DataFrame()\n",
     "    for df_lang in df_lang_gen:\n",
+    "        # the pipe method does not allow nan values but we also can't miss\n",
+    "        # those indexes. So we need to assess at what pos. are the nans and\n",
+    "        # retrieve them\n",
+    "        null_df_lang = df_lang.loc[df_lang[text_col_name].isnull(), :]\n",
+    "        non_null_df_lang = df_lang.loc[df_lang[text_col_name].notnull(), :]\n",
+    "        \n",
     "        new_col = []\n",
-    "        for doc in spacy_nlp_models['en'].pipe(df_lang[text_col_name].tolist(), disable=disable):\n",
-    "            # print(doc)\n",
+    "        for doc in spacy_nlp_models['en'].pipe(non_null_df_lang[text_col_name].tolist(), disable=disable):\n",
+    "            # print(doc.text)\n",
     "            # print(act(doc))\n",
-    "            print([(ent.text, ent.label_) for ent in doc.ents])  # the issue is here, when you call the att. ents you only get the ents and not the other non-entity words!\n",
-    "            text = ' '.join(act(doc))\n",
+    "            # print([(ent.text, ent.label_) for ent in doc.ents])            \n",
+    "            text = act(doc)\n",
     "            new_col.append(text)\n",
-    "        df_lang[f'ner_{text_col_name}'] = new_col\n",
-    "        new_df = pd.concat([new_df, df_lang], axis=0)\n",
+    "\n",
+    "        # merging non nulls and nulls\n",
+    "        non_null_df_lang[f'ner_{text_col_name}'] = new_col\n",
+    "        null_df_lang[f'ner_{text_col_name}'] = [np.nan] * len(null_df_lang)\n",
+    "        merged_df_lang = pd.concat([non_null_df_lang, null_df_lang], axis=0)\n",
+    "\n",
+    "        # final\n",
+    "        new_df = pd.concat([new_df, merged_df_lang], axis=0)\n",
     "\n",
     "    return new_df\n",
     "\n",
@@ -2178,56 +2112,40 @@
     "    'GPE': 'LOCATION',\n",
     "    'LOC': 'LOCATION',\n",
     "}\n",
+    "# TODO replacing actions with english words might not make much sense for langs. other than en.!!\n",
     "\n",
-    "# testing\n",
-    "ner_test_df = pd.DataFrame({\n",
-    "    'index': [1,2,3,4],\n",
-    "    'text': ['Net income was $9.4 million compared to the prior year of $2.7 million.',\n",
-    "             'Lil Jon was walking down the Lisbon beach',\n",
-    "             'I went to Portugal last summer',\n",
-    "             'Eu gosto de comer gelados no Santini de Belém'],\n",
-    "    'lang': ['en', 'en', 'en', 'pt']\n",
-    "})\n",
+    "# # testing\n",
+    "# ner_test_df = pd.DataFrame({\n",
+    "#     'index': [1,2,3,4,5],\n",
+    "#     'text': ['Net income was $9.4 million compared to the prior year of $2.7 million.',\n",
+    "#              'Lil Jon was walking down the Lisbon beach',\n",
+    "#              'I went to Portugal last summer',\n",
+    "#              'Eu gosto de comer gelados com  a testa',\n",
+    "#              np.nan],\n",
+    "#     'lang': ['en', 'en', 'en', 'pt', 'en']\n",
+    "# })\n",
+    "# ner(ner_test_df, 'text', 'lang', ner_actions)\n",
     "\n",
-    "ner(ner_test_df, 'text', 'lang', ner_actions)\n",
     "\n",
-    "# FIX THIS!!!! there is a bug somewhere"
+    "start = time.perf_counter()\n",
+    "\n",
+    "train_merged_description = train_merged[['index', 'lemma_description', 'clean_description_lang']].drop_duplicates()\n",
+    "train_merged_host_about = train_merged[['index', 'lemma_host_about', 'clean_host_about_lang']].drop_duplicates()\n",
+    "train_merged_comments = train_merged[['index', 'lemma_comments', 'clean_comments_lang']]\n",
+    "\n",
+    "ner_description = ner(train_merged_description, 'lemma_description', 'clean_description_lang', ner_actions)\n",
+    "ner_host_about = ner(train_merged_host_about, 'lemma_host_about', 'clean_host_about_lang', ner_actions)\n",
+    "ner_comments = ner(train_merged_comments, 'lemma_comments', 'clean_comments_lang', ner_actions)\n",
+    "\n",
+    "# adding new columns to train_merged\n",
+    "train_merged['ner_lemma_description'] = train_merged['index'].map(dict(zip(ner_description['index'], ner_description['ner_lemma_description'])))\n",
+    "train_merged['ner_lemma_host_about'] = train_merged['index'].map(dict(zip(ner_host_about['index'], ner_host_about['ner_lemma_host_about'])))\n",
+    "train_merged['ner_lemma_comments'] = train_merged['index'].map(dict(zip(ner_comments['index'], ner_comments['ner_lemma_comments'])))\n",
+    "\n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')\n",
+    "\n",
+    "# ... around 11 minutes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('$9.4 million', 'MONEY'), ('the prior year', 'DATE'), ('$2.7 million', 'MONEY')]\n",
-      "[('Lil Jon', 'PERSON'), ('Lisbon', 'GPE')]\n",
-      "[('Portugal', 'GPE'), ('last summer', 'DATE')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# proof of concept\n",
-    "texts = [\n",
-    "    \"Net income was $9.4 million compared to the prior year of $2.7 million.\",\n",
-    "    \"Lil Jon was walking down the Lisbon beach\",\n",
-    "    \"I went to Portugal last summer\"\n",
-    "]\n",
-    "\n",
-    "for doc in spacy_nlp_models['en'].pipe(texts, disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"lemmatizer\"]):\n",
-    "    # Do something with the doc here\n",
-    "    print([(ent.text, ent.label_) for ent in doc.ents])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2254,14 +2172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6248, 3)\n"
+      "(6224, 3)\n"
      ]
     },
     {
@@ -2286,7 +2204,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>index</th>\n",
-       "      <th>lemma_comments</th>\n",
+       "      <th>ner_lemma_comments</th>\n",
        "      <th>unlisted</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -2294,7 +2212,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>cozy comfortable house stay innever worry safe...</td>\n",
+       "      <td>отличный хостел советую ! отличный хостел сове...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2314,8 +2232,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   index                                     lemma_comments  unlisted\n",
-       "0      1  cozy comfortable house stay innever worry safe...         0\n",
+       "   index                                 ner_lemma_comments  unlisted\n",
+       "0      1  отличный хостел советую ! отличный хостел сове...         0\n",
        "1      2                                                NaN         1\n",
        "2      3                                                NaN         1"
       ]
@@ -2359,9 +2277,9 @@
     "wanted_columns = [\n",
     "    'index',\n",
     "    'unlisted',\n",
-    "    'lemma_description',\n",
-    "    'lemma_host_about',\n",
-    "    'lemma_comments'\n",
+    "    'ner_lemma_description',\n",
+    "    'ner_lemma_host_about',\n",
+    "    'ner_lemma_comments'\n",
     "]\n",
     "\n",
     "grouped_train = group_reviews_by_property(train_merged[wanted_columns], only_comments=True)\n",
@@ -2381,14 +2299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4245, 3)\n"
+      "(4229, 3)\n"
      ]
     }
    ],
@@ -2399,7 +2317,7 @@
     "# maybe we can also drop them and then, for those cases, predict\n",
     "# the majority class, 'listed'?\n",
     "\n",
-    "grouped_train = grouped_train.loc[grouped_train['lemma_comments'].notnull(), :]\n",
+    "grouped_train = grouped_train.loc[grouped_train['ner_lemma_comments'].notnull(), :]\n",
     "print(grouped_train.shape)\n",
     "\n",
     "# TODO check if everything correct"
@@ -2414,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -2422,11 +2340,11 @@
      "output_type": "stream",
      "text": [
       "Dataset shapes:\n",
-      "\tTrain: 3395 (79.98%)\n",
-      "\tVal: 425 (10.01%)\n",
-      "\tTest: 425 (10.01%)\n",
+      "\tTrain: 3383 (80.0%)\n",
+      "\tVal: 423 (10.0%)\n",
+      "\tTest: 423 (10.0%)\n",
       "\n",
-      "Total observations: 4245\n"
+      "Total observations: 4229\n"
      ]
     }
    ],
@@ -2434,7 +2352,7 @@
     "# due to sheer amount of data k-fold cross-validation will not be feasible\n",
     "# so a train-val-test split is preferred\n",
     "\n",
-    "X = list(grouped_train['lemma_comments'])\n",
+    "X = list(grouped_train['ner_lemma_comments'])\n",
     "y = list(grouped_train['unlisted'])\n",
     "\n",
     "def two_step_proportions(train_p, val_p, test_p):\n",
@@ -2485,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2500,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -2529,89 +2447,89 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>abel</th>\n",
-       "      <td>0.375021</td>\n",
+       "      <th>je</th>\n",
+       "      <td>0.345734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>karen</th>\n",
-       "      <td>0.256328</td>\n",
+       "      <th>stan</th>\n",
+       "      <td>0.319334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>apartment</th>\n",
-       "      <td>0.222346</td>\n",
+       "      <th>dohvat</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>alfama</th>\n",
-       "      <td>0.216393</td>\n",
+       "      <th>ruke</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>great</th>\n",
-       "      <td>0.201110</td>\n",
+       "      <th>lokalni</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>views</th>\n",
-       "      <td>0.199221</td>\n",
+       "      <th>stana</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>stay</th>\n",
-       "      <td>0.193068</td>\n",
+       "      <th>tacos</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>place</th>\n",
-       "      <td>0.155388</td>\n",
+       "      <th>svega</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>stairs</th>\n",
-       "      <td>0.134004</td>\n",
+       "      <th>traje</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lisbon</th>\n",
-       "      <td>0.125985</td>\n",
+       "      <th>vidimo</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>view</th>\n",
-       "      <td>0.122644</td>\n",
+       "      <th>savršen</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>would</th>\n",
-       "      <td>0.113268</td>\n",
+       "      <th>desteka</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>location</th>\n",
-       "      <td>0.109579</td>\n",
+       "      <th>pohvalu</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>recommend</th>\n",
-       "      <td>0.098257</td>\n",
+       "      <th>koliko</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>joão</th>\n",
-       "      <td>0.095651</td>\n",
+       "      <th>čista</th>\n",
+       "      <td>0.167731</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             TF-IDF\n",
-       "abel       0.375021\n",
-       "karen      0.256328\n",
-       "apartment  0.222346\n",
-       "alfama     0.216393\n",
-       "great      0.201110\n",
-       "views      0.199221\n",
-       "stay       0.193068\n",
-       "place      0.155388\n",
-       "stairs     0.134004\n",
-       "lisbon     0.125985\n",
-       "view       0.122644\n",
-       "would      0.113268\n",
-       "location   0.109579\n",
-       "recommend  0.098257\n",
-       "joão       0.095651"
+       "           TF-IDF\n",
+       "je       0.345734\n",
+       "stan     0.319334\n",
+       "dohvat   0.167731\n",
+       "ruke     0.167731\n",
+       "lokalni  0.167731\n",
+       "stana    0.167731\n",
+       "tacos    0.167731\n",
+       "svega    0.167731\n",
+       "traje    0.167731\n",
+       "vidimo   0.167731\n",
+       "savršen  0.167731\n",
+       "desteka  0.167731\n",
+       "pohvalu  0.167731\n",
+       "koliko   0.167731\n",
+       "čista    0.167731"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
