partially fixed indexing errors

--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -2487,14 +2487,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Translating clean_description to zh-CN:   0%|                                                    | 0/6 [00:00<?, ?it/s]"
+      "Translating clean_description to zh-CN: 100%|████████████████████████████████████████████| 6/6 [00:03<00:00,  1.71it/s]\n",
+      "Translating clean_description to gl: 100%|███████████████████████████████████████████████| 1/1 [00:00<00:00,  1.77it/s]\n",
+      "Translating clean_host_about to zh-CN: 100%|███████████████████████████████████████████| 20/20 [00:11<00:00,  1.67it/s]\n",
+      "Translating clean_host_about to ja: 100%|████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.66it/s]\n",
+      "Translating clean_host_about to sv: 100%|████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.71it/s]\n",
+      "Translating clean_host_about to hu: 100%|████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.83it/s]\n",
+      "Translating clean_host_about to ga: 100%|████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.72it/s]\n",
+      "Translating clean_host_about to eu: 100%|████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.73it/s]\n",
+      "Translating clean_host_about to gl: 100%|████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.68it/s]\n",
+      "Translating clean_comments to ko: 100%|████████████████████████████████████████████| 1412/1412 [14:42<00:00,  1.60it/s]\n",
+      "Translating clean_comments to zh-CN: 100%|█████████████████████████████████████████| 1209/1209 [12:31<00:00,  1.61it/s]\n",
+      "Translating clean_comments to iw: 100%|████████████████████████████████████████████████| 91/91 [00:57<00:00,  1.58it/s]\n",
+      "Translating clean_comments to ja: 100%|██████████████████████████████████████████████| 173/173 [05:51<00:00,  2.03s/it]\n",
+      "Translating clean_comments to pl: 100%|██████████████████████████████████████████████| 537/537 [05:24<00:00,  1.65it/s]\n",
+      "Translating clean_comments to no: 100%|██████████████████████████████████████████████| 198/198 [02:01<00:00,  1.63it/s]\n",
+      "Translating clean_comments to da: 100%|██████████████████████████████████████████████| 419/419 [04:18<00:00,  1.62it/s]\n",
+      "Translating clean_comments to gl: 100%|████████████████████████████████████████████████| 30/30 [00:19<00:00,  1.55it/s]\n",
+      "Translating clean_comments to ca: 100%|██████████████████████████████████████████████| 181/181 [01:51<00:00,  1.62it/s]\n",
+      "Translating clean_comments to sl: 100%|██████████████████████████████████████████████████| 6/6 [00:03<00:00,  1.67it/s]\n",
+      "Translating clean_comments to tr: 100%|████████████████████████████████████████████████| 57/57 [00:35<00:00,  1.62it/s]\n",
+      "Translating clean_comments to cs: 100%|██████████████████████████████████████████████| 110/110 [01:07<00:00,  1.63it/s]\n",
+      "Translating clean_comments to ar: 100%|████████████████████████████████████████████████| 11/11 [00:06<00:00,  1.65it/s]\n",
+      "Translating clean_comments to sk: 100%|████████████████████████████████████████████████| 20/20 [00:12<00:00,  1.63it/s]\n",
+      "Translating clean_comments to sv: 100%|██████████████████████████████████████████████| 360/360 [03:42<00:00,  1.62it/s]\n",
+      "Translating clean_comments to hu: 100%|████████████████████████████████████████████████| 95/95 [00:59<00:00,  1.61it/s]\n",
+      "Translating clean_comments to el: 100%|████████████████████████████████████████████████| 49/49 [00:30<00:00,  1.62it/s]\n",
+      "Translating clean_comments to fi: 100%|██████████████████████████████████████████████| 180/180 [01:52<00:00,  1.60it/s]\n",
+      "Translating clean_comments to uk: 100%|████████████████████████████████████████████████| 45/45 [00:27<00:00,  1.63it/s]\n",
+      "Translating clean_comments to la: 100%|████████████████████████████████████████████████| 13/13 [00:08<00:00,  1.48it/s]\n",
+      "Translating clean_comments to hr: 100%|████████████████████████████████████████████████| 18/18 [00:11<00:00,  1.53it/s]\n",
+      "Translating clean_comments to ro: 100%|████████████████████████████████████████████████| 24/24 [00:14<00:00,  1.64it/s]\n",
+      "Translating clean_comments to ceb: 100%|█████████████████████████████████████████████████| 5/5 [00:03<00:00,  1.62it/s]\n",
+      "Translating clean_comments to eu: 100%|██████████████████████████████████████████████████| 6/6 [00:03<00:00,  1.68it/s]\n",
+      "Translating clean_comments to lv: 100%|██████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.66it/s]\n",
+      "Translating clean_comments to eo: 100%|██████████████████████████████████████████████████| 6/6 [00:03<00:00,  1.64it/s]\n",
+      "Translating clean_comments to sr: 100%|████████████████████████████████████████████████| 12/12 [00:07<00:00,  1.57it/s]\n",
+      "Translating clean_comments to af: 100%|██████████████████████████████████████████████████| 4/4 [00:02<00:00,  1.64it/s]\n",
+      "Translating clean_comments to lt: 100%|██████████████████████████████████████████████████| 6/6 [00:03<00:00,  1.60it/s]\n",
+      "Translating clean_comments to vi: 100%|██████████████████████████████████████████████████| 3/3 [00:02<00:00,  1.46it/s]\n",
+      "Translating clean_comments to fy: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.50it/s]\n",
+      "Translating clean_comments to is: 100%|██████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.58it/s]\n",
+      "Translating clean_comments to bg: 100%|██████████████████████████████████████████████████| 7/7 [00:04<00:00,  1.65it/s]\n",
+      "Translating clean_comments to bs: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.65it/s]\n",
+      "Translating clean_comments to th: 100%|████████████████████████████████████████████████| 10/10 [00:07<00:00,  1.41it/s]\n",
+      "Translating clean_comments to sw: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.76it/s]\n",
+      "Translating clean_comments to et: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.67it/s]\n",
+      "Translating clean_comments to id: 100%|██████████████████████████████████████████████████| 4/4 [00:02<00:00,  1.68it/s]\n",
+      "Translating clean_comments to ta: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.44it/s]\n",
+      "Translating clean_comments to km: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.43it/s]\n",
+      "Translating clean_comments to fa: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.59it/s]\n",
+      "Translating clean_comments to kn: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.47it/s]\n",
+      "Translating clean_comments to ko: 100%|██████████████████████████████████████████████| 193/193 [02:01<00:00,  1.59it/s]\n",
+      "Translating clean_comments to pl: 100%|████████████████████████████████████████████████| 50/50 [00:30<00:00,  1.61it/s]\n",
+      "Translating clean_comments to zh-CN: 100%|███████████████████████████████████████████| 137/137 [01:24<00:00,  1.62it/s]\n",
+      "Translating clean_comments to fi: 100%|████████████████████████████████████████████████| 23/23 [00:14<00:00,  1.59it/s]\n",
+      "Translating clean_comments to tr: 100%|██████████████████████████████████████████████████| 8/8 [00:04<00:00,  1.63it/s]\n",
+      "Translating clean_comments to sv: 100%|████████████████████████████████████████████████| 43/43 [00:26<00:00,  1.64it/s]\n",
+      "Translating clean_comments to ca: 100%|████████████████████████████████████████████████| 28/28 [00:16<00:00,  1.66it/s]\n",
+      "Translating clean_comments to cs: 100%|████████████████████████████████████████████████| 11/11 [00:07<00:00,  1.56it/s]\n",
+      "Translating clean_comments to et: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.64it/s]\n",
+      "Translating clean_comments to hu: 100%|████████████████████████████████████████████████| 15/15 [00:09<00:00,  1.64it/s]\n",
+      "Translating clean_comments to ar: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.69it/s]\n",
+      "Translating clean_comments to da: 100%|████████████████████████████████████████████████| 38/38 [00:23<00:00,  1.60it/s]\n",
+      "Translating clean_comments to ja: 100%|████████████████████████████████████████████████| 24/24 [01:08<00:00,  2.85s/it]\n",
+      "Translating clean_comments to el: 100%|██████████████████████████████████████████████████| 9/9 [00:05<00:00,  1.77it/s]\n",
+      "Translating clean_comments to iw: 100%|████████████████████████████████████████████████| 13/13 [00:07<00:00,  1.69it/s]\n",
+      "Translating clean_comments to no: 100%|████████████████████████████████████████████████| 20/20 [00:11<00:00,  1.71it/s]\n",
+      "Translating clean_comments to hr: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.58it/s]\n",
+      "Translating clean_comments to mk: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.82it/s]\n",
+      "Translating clean_comments to ro: 100%|██████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.64it/s]\n",
+      "Translating clean_comments to gl: 100%|██████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.56it/s]\n",
+      "Translating clean_comments to sk: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.71it/s]\n",
+      "Translating clean_comments to sr: 100%|██████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.71it/s]\n",
+      "Translating clean_comments to uk: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.64it/s]\n",
+      "Translating clean_comments to la: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.69it/s]\n",
+      "Translating clean_comments to kn: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.43it/s]\n",
+      "Translating clean_comments to bg: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.68it/s]\n",
+      "Translating clean_comments to ceb: 100%|█████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.63it/s]\n",
+      "Translating clean_comments to lv: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 4018.76 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -2555,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2565,25 +2657,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "trans_clean_comments_lang\n",
-       "en    240168\n",
-       "fr     53119\n",
-       "pt     22552\n",
+       "en    240251\n",
+       "fr     53120\n",
+       "pt     22559\n",
        "es     19370\n",
-       "de     14277\n",
-       "it      5708\n",
+       "de     14278\n",
+       "it      5713\n",
        "nl      3555\n",
        "ru      1533\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2614,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2638,17 +2730,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Took 80.83 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# the spacy model is somewhat complex so in order to increase efficiency\n",
     "# we can use the pipe method: https://spacy.io/usage/processing-pipelines\n",
@@ -2688,7 +2772,7 @@
     "        return text\n",
     "\n",
     "    disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"lemmatizer\"]  # for efficiency reasons\n",
-    "    df_lang_gen = group_by_language(df, lang_col_name)\n",
+    "    df_lang_gen = group_by_language(df, lang_col_name)  # using data generator to group datasets by language to speed up nlp.pipe\n",
     "    new_df = pd.DataFrame()\n",
     "    for df_lang in df_lang_gen:\n",
     "        lang = df_lang[lang_col_name].iloc[0]\n",
@@ -2717,19 +2801,6 @@
     "    'LOC': {'en': 'location', 'pt': 'local', 'fr': 'emplacement', 'es': 'ubicación', 'it': 'posizione', 'de': 'standort', 'nl': 'plaats', 'ru': 'расположение'},\n",
     "}\n",
     "\n",
-    "# # testing\n",
-    "# ner_test_df = pd.DataFrame({\n",
-    "#     'index': [1,2,3,4,5],\n",
-    "#     'text': ['Net income was $9.4 million compared to the prior year of $2.7 million.',\n",
-    "#              'Lil Jon was walking down the Lisbon beach',\n",
-    "#              'I went to Portugal last summer',\n",
-    "#              'Eu gosto de comer gelados com  a testa',\n",
-    "#              np.nan],\n",
-    "#     'lang': ['en', 'en', 'en', 'pt', 'en']\n",
-    "# })\n",
-    "# ner(ner_test_df, 'text', 'lang', ner_actions)\n",
-    "\n",
-    "\n",
     "start = time.perf_counter()\n",
     "\n",
     "for df in [train_merged, test_merged]:\n",
@@ -2747,6 +2818,38 @@
     "\n",
     "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Additional #2: Topic Modelling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# topic modelling is an unsupervised learning technique that aims to extratc\n",
+    "# the core idea of the sequence of tokens. While this technique might not be \n",
+    "# directly usable to transoform a column we can use use it to prune our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
